@@ -62,7 +62,7 @@ def update_maintainer(debian_directory, verbose=False):
 
     # If the rules file accounts for XSBC-Original-Maintainer, we should not
     # touch it in this package (e.g. the python package).
-    if 'XSBC-Original-' in file(os.path.join(debian_directory, "rules")).read():
+    if 'XSBC-Original-' in open(os.path.join(debian_directory, "rules")).read():
         if verbose:
             print "XSBC-Original is managed by 'rules' file. Doing nothing."
         return(0)
